--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "hardhat clean",
+    "build": "hardhat compile",
+    "prebuild": "hardhat clean",
+    "prepare": "npm run build",
+    "test": "hardhat test",
+    "test:coverage": "hardhat coverage"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +18,13 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.1.0",
+    "@typechain/hardhat": "^6.1.0",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.2.0",
     "hardhat": "^2.6.8",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.16"
-  }
+  },
+  "types": "./typechain-types/index.ts"
 }
